# rt-v3c-decoder-plugin

./: .gitattributes  .gitignore  .gitmodules  ATTRIBUTION_NOTICE.txt  CMakeLists.txt  CONTRIBUTING.md  README.md
Libraries/iloj/release/android/arm64-v8a/include/iloj/gpu/: attribute.h  camera.h  clear.h  delegate.h  depth.h  drawable.h  framebuffer.h  functions.h  interactor.h  lookat.h  options.h  plan.h  processor.h  program.h  rtt.h  rtt.hpp  scheduler.h  texture.h  types.h  uniform.h  viewport.h
Libraries/iloj/release/android/arm64-v8a/include/iloj/gpu/framework/glfw/: application.h  window.h
Libraries/iloj/release/android/arm64-v8a/include/iloj/gui/: background.h  frame.h  interactor.h  layout.h  selectable.h  spacing.h  text.h  types.h  widget.h
Libraries/iloj/release/android/arm64-v8a/include/iloj/math/: essentials.h  filtering.h  filtering.hpp  graph.h  graph.hpp  matrix.h  newton.h  pose.h  pose.hpp  sparse.h  sparse.hpp  vector.h
Libraries/iloj/release/android/arm64-v8a/include/iloj/media/: iilojavcodec.h  ilojavcodecs.h  metric.h  pixelformat.h  timer.h  zlib.h
Libraries/iloj/release/android/arm64-v8a/include/iloj/misc/: allocator.h  array.h  filesystem.h  jni.h  logger.h  macros.h  memory.h  obfuscate.h  packet.h  socket.h  test.h  thread.h  time.h  time.hpp
Libraries/iloj/release/android/arm64-v8a/lib/cmake/: ilojConfig-release.cmake  ilojConfig.cmake  ilojjConfig.cmake
Libraries/iloj/release/msvc/include/iloj/gpu/: benchmarker.h  blending.h  buffer.h  camera.h  clear.h  color.h  context.h  culling.h  definitions.h  depth.h  drawable.h  functions.h  image.h  macros.h  memory.h  mesh.h  plan.h  ply.h  program.h  renderer.h  rtt.hpp  texture.h  uniform.h  unit.h  viewport.h
Libraries/iloj/release/msvc/include/iloj/gpu/framework/glfw/: application.h  event.h  interactor.h  joystick.h  window.h
Libraries/iloj/release/msvc/include/iloj/gpu/framework/lazy/: processor.h
Libraries/iloj/release/msvc/include/iloj/gpu/framework/native/: processor.h
Libraries/iloj/release/msvc/include/iloj/gui/: background.h  clickable.h  delegate.h  frame.h  gauge.h  input.h  interactor.h  label.h  logger.h  selectable.h  spacing.h  text.h  types.h  widget.h
Libraries/iloj/release/msvc/include/iloj/math/: essentials.h  filtering.h  filtering.hpp  graph.hpp  linalg.h  linalg.hpp  newton.h  pose.h  sparse.h  vector.h
Libraries/iloj/release/msvc/include/iloj/media/: avcodec.h  colorspace.h  descriptor.h  iilojavcodec.h  ilojavcodecs.h  timer.h  zlib.h
Libraries/iloj/release/msvc/include/iloj/misc/: algorithm.h  array.h  cmdline.h  dll.h  filesystem.h  jni.h  jni.hpp  json.h  logger.h  memory.h  obfuscate.h  packet.h  string.h  thread.h  time.h  time.hpp  traits.h
Libraries/iloj/release/msvc/lib/: iloj.lib
Libraries/iloj/release/msvc/lib/cmake/: ilojConfig-release.cmake  ilojConfig.cmake
Scripts/: build_android.sh  build_win64.sh  copy_libs.sh  dl_deps.sh
Sources/: CMakeLists.txt
Sources/common/: CMakeLists.txt
Sources/common/include/common/: texture_format.h
Sources/common/include/common/decoder/: miv.h  vpcc.h
Sources/common/include/common/misc/: spsc_queue.h  types.h  types_haptic.h
Sources/common/include/common/stream/: chunk.h  item.h
Sources/common/include/common/video/: job.h  pose.h  texture.h
Sources/common/src/decoder/: miv.cpp  vpcc.cpp
Sources/common/src/stream/: item.cpp
Sources/common/src/video/: job.cpp  pose.cpp  texture.cpp
Sources/decoder/: CMakeLists.txt
Sources/decoder/include/audio/: audio.h  buffer.h
Sources/decoder/include/client/: meta.h  reader.h
Sources/decoder/include/decoder/: decoder.h  decoder_haptic.h
Sources/decoder/include/haptic/: haptic.h
Sources/decoder/include/interface/: audio.h  client.h  decoder.h  haptic.h  scheduler.h  video.h
Sources/decoder/include/main/: interface.h
Sources/decoder/include/scheduler/: scheduler.h
Sources/decoder/include/streaming/: client_dash.h  network_interface.h
Sources/decoder/include/unity/: AudioPluginInterface.h  IUnityGraphics.h  IUnityGraphicsD3D11.h  IUnityInterface.h
Sources/decoder/include/video/: video.h
Sources/decoder/src/audio/: audio.cpp  buffer.cpp
Sources/decoder/src/client/: meta.cpp  reader.cpp
Sources/decoder/src/decoder/: decoder.cpp  decoder_haptic.cpp
Sources/decoder/src/haptic/: haptic.cpp
Sources/decoder/src/main/: core.cpp  interface.cpp
Sources/decoder/src/scheduler/: scheduler.cpp
Sources/decoder/src/streaming/: client_dash.cpp  network_interface.cpp
Sources/decoder/src/unity/: audio.cpp
Sources/decoder/src/video/: video.cpp
Sources/decoder_haptic/: CMakeLists.txt
Sources/decoder_haptic/include/: decoder_haptic.h
Sources/decoder_haptic/src/: decoder_haptic.cpp  haptic.cpp
Sources/synthesizers/: CMakeLists.txt
Sources/synthesizers/synthesizer_haptic/: CMakeLists.txt
Sources/synthesizers/synthesizer_haptic/include/: synthesizer.h  types.h
Sources/synthesizers/synthesizer_haptic/src/: haptic.cpp  synthesizer.cpp
Sources/synthesizers/synthesizer_vpcc/: CMakeLists.txt
Sources/synthesizers/synthesizer_vpcc/include/: VPCCModelBuilder.h  VPCCRenderer.h  synthesizer_vpcc.h  types_vpcc.h
Sources/synthesizers/synthesizer_vpcc/src/: VPCCModelBuilder.cpp  VPCCRenderer.cpp  callback_vpcc.cpp  synthesizer_vpcc.cpp
